--- a/css files/style.css
+++ b/css files/style.css
@@ -320,7 +320,7 @@ header .logo img {
 
 .features .container .features-content {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 40px;
     text-align: center;
 }
